--- a/app/views/account/show.rhtml
+++ b/app/views/account/show.rhtml
@@ -7,6 +7,12 @@
   <%= render :partial => 'event/sidebar_standard' %>
 	<!--<h3>%= t(:friends) %></h3>
 	<p>here a list of all his friends</p>-->
+	
+	<br /><br />
+	<h3><%= t(:become_fan) %></h3>
+	<div>
+		<fb:fan profile_id="68339386368" stream="0" connections="10" logobar="1" width="230"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Eventicusde/68339386368">Eventicus.de</a> on Facebook</div>
+	</div>
 <% end %>
 
 <div class="user">
