--- a/app/views/event/_addlocation.rhtml
+++ b/app/views/event/_addlocation.rhtml
@@ -104,6 +104,8 @@
 	} // End of cancelAddLocation
 </script>
 
+<div class="grid_8 alpha omega">
+	
 <div id="addMetro" class="newLocation" style="display:none">
 	
 	<ul id="addLocationTabs" class="tabs">
@@ -210,4 +212,6 @@
 		
 	</div>
 		
+</div>
+
 </div>
