--- a/app/views/event/_metro_data.rhtml
+++ b/app/views/event/_metro_data.rhtml
@@ -1,5 +1,5 @@
 <div class="form_field"><label for="metro_name"><%= t(:metro_name) %></label><br/>
-<%= text_field 'metro', 'name'  %></div>	
+<%= text_field 'metro', 'name', :style => "width: 100%"  %></div>	
 
 <div class="form_field"><label for="metro_state"><%= t(:state) %></label><br/>
 <%= text_field 'metro', 'state'  %></div>	
