--- a/app/views/event/about.rhtml
+++ b/app/views/event/about.rhtml
@@ -7,8 +7,18 @@
 
 
 <% content_for("sidebox") do %>
-	<h3>Short Stats</h3>
-	<p>Here you will find some stats about Eventicus.</p>
+
+<div class="box">
+	<div class="box_header">
+  	<h3><%= t(:become_fan) %></h3>
+	</div>
+	<div class="box_body">
+		<div>
+			<fb:fan profile_id="68339386368" stream="0" connections="10" logobar="1" width="270"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Eventicusde/68339386368">Eventicus.de</a> on Facebook</div>
+		</div>
+		<div style="clear:both"></div>
+	</div>
+</div>
 <% end %>
 
 <% content_for("tabs") do %>
@@ -28,7 +38,7 @@
 			<li>Upload photos to show them on your events' page</li>
 			<li>And much more coming soon...</li>
 		</ul>
-		<p>Eventicus was built by Mathias Karstädt a Ruby on Rails developer from Hanover, Germany.
+		<p>Eventicus was built by Mathias Karstädt a Ruby on Rails developer from Hamburg, Germany.
 		Currently there are no other team members but if you think you can help me out building this service than feel free to contact me.</p>
 	</div>
 </div>
@@ -53,7 +63,7 @@
 		<br />
 		<b>Phone:</b> <i>+49 (040) 67309098</i><br />
 		<b>Email:</b> <i>mathias [dot] karstaedt [at] gmail [dot] com</i><br />
-		<b>URL:</b> <i><a href="http://www.eventicus.com">eventicus.com</a></i>
+		<b>URL:</b> <i><a href="http://www.eventicus.de">eventicus.de</a></i>
 		</p>
 	</div>
 </div>
