--- a/app/views/event/_events.rhtml
+++ b/app/views/event/_events.rhtml
@@ -1,7 +1,13 @@
 
 <% for event in @events %>
-<div id="event<%= event.id %>" class="event-summary">
-	<div class="event-body">
+<div id="event<%= event.id %>" class="event-summary grid_8 alpha omega">
+	<div class="grid_1 alpha">
+		<div class="event-date">
+			<strong class="event-day"><span class="day"><%= event.date_start.in_time_zone.strftime('%d') %></span><br /><span class="month"><%= event.date_start.in_time_zone.strftime('%b<br />%Y') %></span></strong>
+			<div class="event-time"><%=h event.date_start.in_time_zone.strftime('%H:%M') %></div>
+		</div>
+	</div>
+	<div class="event-body grid_5 alpha omega" style="width:400px">
 		<h3><%= link_to strip_tags(event.title), event_url(:metro => event.location.metro, :id => event) %></h3>
 		<p class="event-submitted">
 			<% if event.scrapingid %>
@@ -27,29 +33,32 @@
 				<%= link_to event.category.name, events_url(:category => event.category.short, :place => params[:place], :type => params[:type], :range => params[:range]) %>
 			</span>
 			<% end %>
+			<% if session['user'] %>
+				<% if event.attendees.find_by_user_id session['user'].id %>
+					<span class="event-push">
+						<%= t(:i_am_going) %>
+					</span>
+				<% else%>
+					<span class="event-push">
+						<%= link_to t(:attend), attend_path(:id => event, :metro => event.location.metro) %>
+					</span>
+				<% end %>
+			<% end %>
 		</div>
 	</div>
-	<div class="event-location">
-		<span class="location-name"><%=h event.location.name %></span><br />
-		<span class="address"><%=h event.location.street %><br />
-		<%=h event.location.zip %> <%= link_to event.location.metro.name, events_url(:place => event.location.metro) %></span>
+	<div class="grid_2 omega">
+		<div class="event-location">
+			<span class="location-name"><%=h event.location.name %></span><br />
+			<span class="address"><%=h event.location.street %><br />
+			<%=h event.location.zip %> <%= link_to event.location.metro.name, events_url(:place => event.location.metro) %></span>
+		</div>
 	</div>
-	<div class="event-date">
-		<strong class="event-day"><span class="day"><%= event.date_start.in_time_zone.strftime('%d') %></span><br /><span class="month"><%= event.date_start.in_time_zone.strftime('%b %Y') %></span></strong>
-		<div class="event-time"><%=h event.date_start.in_time_zone.strftime('%H:%M') %></div>
-	</div>
-	<% if session['user'] %>
-		<% if event.attendees.find_by_user_id session['user'].id %>
-			<div class="event-push">
-				<%= t(:i_am_going) %>
-			</div>
-		<% else%>
-			<div class="event-push">
-				<%= link_to t(:attend), attend_path(:id => event, :metro => event.location.metro) %>
-			</div>
-		<% end %>
-	<% end %>
+	<div style="clear:both;"></div>
+	<div style="margin: 10px 10px 0px 0px;border-bottom: 1px dashed #CCCC99;"></div>
 </div>
+
 <% end %>
 
-<%= will_paginate @events %>
+<div class="grid_8">
+	<%= will_paginate @events %>
+</div>
