--- a/app/views/event/show.rhtml
+++ b/app/views/event/show.rhtml
@@ -28,34 +28,60 @@
 
 <% content_for("sidebox") do %>
   <%= render :partial => 'sidebar_standard' %>
-	<h3><%= t(:category) %></h3>
-	<p><%=h t(@event.category.name.downcase.to_sym, :scope => :categories) %></p>
-	<h3><%= @event.attending_users.count %> <%= t(:attending) %></h3>
-	<ul class="userlist">
-	<% for user in @event.attending_users %>
-	<li>
-    <div class="avatar"><%= link_to(avatar_for(user, :small), user_url(:id => user.login)) %></div>
-    <div class="username"><%= link_to(user.login, user_url(:id => user.login)) %>
-      <% if user == session['user']%>
-  			<%= link_to "[x]", :action => "notattending", :id => @event, :metro => @event.location.metro %>
-  		<% end %>  
-    </div>		
-	</li>
-	<% end %>
-	</ul>
+
+	<div class="box">
+		<div class="box_header">
+	  	<h3><%= t(:category) %></h3>
+		</div>
+		<div class="box_body">
+			<div>
+				<p><%=h t(@event.category.name.downcase.to_sym, :scope => :categories) %></p>
+			</div>
+			<div style="clear:both"></div>
+		</div>
+	</div>
+
+	<div class="box">
+		<div class="box_header">
+	  	<h3><%= @event.attending_users.count %> <%= t(:attending) %></h3>
+		</div>
+		<div class="box_body">
+			<div>
+				<ul class="userlist">
+				<% for user in @event.attending_users %>
+				<li>
+			    <div class="avatar"><%= link_to(avatar_for(user, :small), user_url(:id => user.login)) %></div>
+			    <div class="username"><%= link_to(user.login, user_url(:id => user.login)) %>
+			      <% if user == session['user']%>
+			  			<%= link_to "[x]", :action => "notattending", :id => @event, :metro => @event.location.metro %>
+			  		<% end %>  
+			    </div>		
+				</li>
+				<% end %>
+				</ul>
+
+				<% if session['user'] %>
+				<span id="category_description">
+					<% if !@event.attendees.find_by_user_id(session['user'].id) %>
+						<%= link_to t(:attend), attend_path(:id => @event, :metro => @event.location.metro) %>
+					<% end %>
+				</span>
+				<% end %>
+			</div>
+			<div style="clear:both"></div>
+		</div>
+	</div>
 	
-	<% if session['user'] %>
-	<span id="category_description">
-		<% if !@event.attendees.find_by_user_id(session['user'].id) %>
-			<%= link_to t(:attend), attend_path(:id => @event, :metro => @event.location.metro) %>
-		<% end %>
-	</span>
-	<% end %>
-	
-	<br /><br />
-	<h3><%= t(:become_fan) %></h3>
-	<div>
-		<fb:fan profile_id="68339386368" stream="0" connections="10" logobar="1" width="230"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Eventicusde/68339386368">Eventicus.de</a> on Facebook</div>
+	<div class="box">
+		<div class="box_header">
+	  	<h3><%= t(:become_fan) %></h3>
+		</div>
+		<div class="box_body">
+			<div>
+				<fb:fan profile_id="68339386368" stream="0" connections="10" logobar="1" width="270"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Eventicusde/68339386368">Eventicus.de</a> on Facebook</div>
+			</div>
+			<div style="clear:both"></div>
+		</div>
 	</div>
 	
 	
@@ -93,119 +119,118 @@
 	<%= @event.description.gsub("&amp;","&").gsub("\n","").gsub("\r","").strip_html.strip %>
 <% end %>
 
-<div class="vevent vcalendar event" style="position:relative;margin-top: -20px">
-
+<div class="vevent vcalendar event" class="grid_8 alpha omega" style="position:relative;margin-top: -10px">
 	
-	<div id="event-title">
-		<h1 class="summary">
-			<%=h @event.title %>
-		</h1>
-	<div id="share_on_facebook" style="float:right; width: 70px;text-align:right">
-		<a name="fb_share" type="box_count" href="http://www.facebook.com/sharer.php?u=<%= CGI.escape "http://eventicus.de#{request.path}" %>&t=<%= CGI.escape (yield :title) %>"><%= t(:share) %></a><script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
-	</div>
-	</div>
-
-	<div class="event-user">
-		<% if @event.scrapingid %>
-			<div id="source">
-				<%= t(:event_found_on) %> <%= link_to @event.scrapingid, @event.scrapingid %>
-			</div>
-		<% else %>
-		  	<%= link_to avatar_for(@event.user, :small, {:style => "vertical-align: middle"}), user_url(:id => @event.user.login) %>
-			<%= link_to @event.user.login, user_url(:id => @event.user.login) %>
-			<%= t(:submitted_this_event) %>
-			<span class="small-date"><%= time_ago_or_time_stamp(@event.date_created) %></span>
-		<% end %>
-	</div>
-
-	<div class="event-time">
-		<h2><%= t(:when) %></h2>
-		<div class="data">
-			<span><%= tz(@event.date_start).strftime('%A, %B %d, %Y  %H:%M') %></span> <span class="end-date">- <%= tz(@event.date_end).strftime('%A, %B %d, %Y  %H:%M') %></span>
+		<div id="event-title">
+			<h1 class="summary">
+				<%=h @event.title %>
+			</h1>
+		<div id="share_on_facebook" style="float:right; width: 70px;text-align:right">
+			<a name="fb_share" type="box_count" href="http://www.facebook.com/sharer.php?u=<%= CGI.escape "http://eventicus.de#{request.path}" %>&t=<%= CGI.escape (yield :title) %>"><%= t(:share) %></a><script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
 		</div>
-	</div>
+		</div>
 
-	<div class="event-location">
+		<div class="event-user">
+			<% if @event.scrapingid %>
+				<div id="source">
+					<%= t(:event_found_on) %> <%= link_to @event.scrapingid, @event.scrapingid %>
+				</div>
+			<% else %>
+			  	<%= link_to avatar_for(@event.user, :small, {:style => "vertical-align: middle"}), user_url(:id => @event.user.login) %>
+				<%= link_to @event.user.login, user_url(:id => @event.user.login) %>
+				<%= t(:submitted_this_event) %>
+				<span class="small-date"><%= time_ago_or_time_stamp(@event.date_created) %></span>
+			<% end %>
+		</div>
+
+		<div class="event-time">
+			<h2><%= t(:when) %></h2>
+			<div class="data">
+				<span><%= tz(@event.date_start).strftime('%A, %B %d, %Y  %H:%M') %></span> <span class="end-date">- <%= tz(@event.date_end).strftime('%A, %B %d, %Y  %H:%M') %></span>
+			</div>
+		</div>
+
+		<div class="event-location">
 		
-		<h2><%= t(:where) %></h2>
-		<div class="location vcard data">
-			<div id="map" style="width:300px;height:150px"></div>
-			<span class="fn org"><%=h @event.location.name %></span><br />
-			<div class="adr">
-				<span class="street-address"><%=h @event.location.street %></span><%= "<br />" if @event.location.street %>
-				<span class="locality"><%= link_to @event.location.metro.name, events_url(:place => @event.location.metro) %></span>, <span class="region"><%=h @event.location.metro.state %></span> <span class="postal-code"><%=h @event.location.zip %></span><br />
-				<span class="country-name"><%=h @event.location.metro.country %></span>
-			</div><br />
+			<h2><%= t(:where) %></h2>
+			<div class="location vcard data">
+				<div id="map" style="width:300px;height:150px"></div>
+				<span class="fn org"><%=h @event.location.name %></span><br />
+				<div class="adr">
+					<span class="street-address"><%=h @event.location.street %></span><%= "<br />" if @event.location.street %>
+					<span class="locality"><%= link_to @event.location.metro.name, events_url(:place => @event.location.metro) %></span>, <span class="region"><%=h @event.location.metro.state %></span> <span class="postal-code"><%=h @event.location.zip %></span><br />
+					<span class="country-name"><%=h @event.location.metro.country %></span>
+				</div><br />
+			</div>
 		</div>
-	</div>
 
-	<div class="event-description">
-		<h2><%= t(:what) %></h2>
-		<div class="description data">
-			<%= nl2br(auto_link(textilize(@event.description.gsub("&amp;","&").strip))) %>
-		</div>
-	</div>
-	
-	<div class="event-pictures">
-		<h2><%= t(:photos) %></h2>
-		<div id="photohelp" class="data help" style="display:none">
-			To add a new photo you need an account from <a href="http://flickr.com">flickr</a>, upload you photos there<br /> and tag them with <input type="text" onClick="this.select()" value="eventicus:event=<%=@event.id %>" />.<br />
-			Your photo will appear on this page automatically.
-		</div>
-		<div class="data">
-			<% if @photos.size == 0 %><%= t(:not_tagged_photos) %><% end %>
-			<%=link_to_function(t(:add_own_photos), nil, :id => "photohelpshow") do |page| 
-				page.visual_effect :toggle_slide, 'photohelp' 
-				page[:photohelpshow].hide
-			end %>
-			<div>
-				<br />
-				<% for photo in @photos %>
-					<a href="<%=photo.url %>" title="<%=photo.title %>"><img class="photo" src="<%=photo.sizes[0]['source'] %>" /></a>
-				<% end %>
+		<div class="event-description">
+			<h2><%= t(:what) %></h2>
+			<div class="description data">
+				<%= nl2br(auto_link(textilize(@event.description.gsub("&amp;","&").strip))) %>
 			</div>
 		</div>
-	</div>
 	
-	<div class="event-comments">
-		<a name="comments"></a>
-		<h2><%= t(:comments) %></h2>
-		<div class="data">
-			<div id="comments">
-				<% for comment in @event.comments_ordered_by_submitted %>
-				<%= render :partial => 'comment', :object => comment %>
-				<% end %>
-				<% if @event.comments.count == 0%><%= t(:no_comments) %><% end %>
+		<div class="event-pictures">
+			<h2><%= t(:photos) %></h2>
+			<div id="photohelp" class="data help" style="display:none">
+				To add a new photo you need an account from <a href="http://flickr.com">flickr</a>, upload you photos there<br /> and tag them with <input type="text" onClick="this.select()" value="eventicus:event=<%=@event.id %>" />.<br />
+				Your photo will appear on this page automatically.
 			</div>
-		</div>
-		
-		<% if session['user'] %>
-		<h2><%= t(:leave_reply) %></h2>
-		<div class="data">
-			
-				<div id="addComment">
-					<% form_remote_tag  :html => {:action => 'add_comment', :id => 'comment_form'}, 
-										:url => { :action => 'add_comment', :id => @event, :metro => @event.location.metro},
-										:update => { :success => 'comments'},
-										:position => :top,
-										:success => "Form.reset('comment_form')" do %>
-					
-						<div class="form_field"><label for="comment_comment"><%= t(:comment) %></label><br/>
-						<%= text_area 'comment', 'comment', 'rows' => 5  %></div>
-					
-						<%= submit_tag t(:submit_comment) %> 
-					  
+			<div class="data">
+				<% if @photos.size == 0 %><%= t(:not_tagged_photos) %><% end %>
+				<%=link_to_function(t(:add_own_photos), nil, :id => "photohelpshow") do |page| 
+					page.visual_effect :toggle_slide, 'photohelp' 
+					page[:photohelpshow].hide
+				end %>
+				<div>
+					<br />
+					<% for photo in @photos %>
+						<a href="<%=photo.url %>" title="<%=photo.title %>"><img class="photo" src="<%=photo.sizes[0]['source'] %>" /></a>
 					<% end %>
 				</div>
-			
+			</div>
 		</div>
-		<% end %>
+	
+		<div class="event-comments">
+			<a name="comments"></a>
+			<h2><%= t(:comments) %></h2>
+			<div class="data">
+				<div id="comments">
+					<% for comment in @event.comments_ordered_by_submitted %>
+					<%= render :partial => 'comment', :object => comment %>
+					<% end %>
+					<% if @event.comments.count == 0%><%= t(:no_comments) %><% end %>
+				</div>
+			</div>
+		
+			<% if session['user'] %>
+			<h2><%= t(:leave_reply) %></h2>
+			<div class="data">
+			
+					<div id="addComment">
+						<% form_remote_tag  :html => {:action => 'add_comment', :id => 'comment_form'}, 
+											:url => { :action => 'add_comment', :id => @event, :metro => @event.location.metro},
+											:update => { :success => 'comments'},
+											:position => :top,
+											:success => "Form.reset('comment_form')" do %>
+					
+							<div class="form_field"><label for="comment_comment"><%= t(:comment) %></label><br/>
+							<%= text_area 'comment', 'comment', 'rows' => 5  %></div>
+					
+							<%= submit_tag t(:submit_comment) %> 
+					  
+						<% end %>
+					</div>
+			
+			</div>
+			<% end %>
 
-	</div>
+		</div>
 
-	<span style="display:none" class="category"><%=h @event.category.name %></span>
-	<span style="display:none" class="dtstamp"><%=@event.date_created.iso8601 %></span>
-	<span style="display:none" class="dtstart"><%=@event.date_start.iso8601 %></span>
-	<span style="display:none" class="dtend"><%=@event.date_end.iso8601 %></span>
-
+		<span style="display:none" class="category"><%=h @event.category.name %></span>
+		<span style="display:none" class="dtstamp"><%=@event.date_created.iso8601 %></span>
+		<span style="display:none" class="dtstart"><%=@event.date_start.iso8601 %></span>
+		<span style="display:none" class="dtend"><%=@event.date_end.iso8601 %></span>
+	
 </div>
