--- a/app/views/blog/_comment.rhtml
+++ b/app/views/blog/_comment.rhtml
@@ -1,6 +1,6 @@
 <div class="comment">
 	<div class="comment_head">
-		<%= link_to @comment.user.login, user_url(:id => @comment.user.login) %> commented <span class="small-date"><%= time_ago_in_words @comment.created_at %> ago</span>
+		<%= link_to @comment.user.login, user_url(:id => @comment.user) %> commented <span class="small-date"><%= time_ago_in_words @comment.created_at %> ago</span>
 	</div>
 	<div class="comment_top">
 	</div>
