--- a/app/views/event/_comment.rhtml
+++ b/app/views/event/_comment.rhtml
@@ -3,7 +3,7 @@
     <%= avatar_for(User.find(comment.user_id), :normal)%>
   </div>
 	<div class="comment_head">
-		<%= link_to comment.user.login, user_url(:id => comment.user.login) %> commented <span class="small-date"><%= time_ago_or_time_stamp(comment.created_at) %></span>
+		<%= link_to comment.user.login, user_url(:id => comment.user) %> commented <span class="small-date"><%= time_ago_or_time_stamp(comment.created_at) %></span>
 	</div>
 	<div class="comment_top">
 	</div>
