--- a/app/views/event/_events.rhtml
+++ b/app/views/event/_events.rhtml
@@ -13,8 +13,8 @@
 			<% if event.scrapingid %>
 				<%= t(:event_created) %>
 			<% else %>
-			  	<%= link_to avatar_for(event.user, :mini), user_url(:id => event.user.login) %>
-				<%= link_to event.user.login, user_url(:id => event.user.login) %>
+			  	<%= link_to avatar_for(event.user, :mini), user_url(:id => event.user) %>
+				<%= link_to event.user.login, user_url(:id => event.user) %>
 				<%= t(:submitted_this_event) %>
 			<% end %>
 			<span class="small-date"><%= time_ago_or_time_stamp(event.date_created) %></span>
