--- a/app/views/blog/_blogposts.rhtml
+++ b/app/views/blog/_blogposts.rhtml
@@ -3,8 +3,9 @@
 	<div id="post<%= post.id %>" class="event-summary grid_8 alpha omega">
 		<div class="grid_1 alpha">
 			<div class="event-date">
-				<strong class="event-day"><span class="day"><%= post.created_at.in_time_zone.strftime('%d') %></span><br /><span class="month"><%= post.created_at.in_time_zone.strftime('%b<br />%Y') %></span></strong>
-				<div class="event-time"><%=h post.created_at.in_time_zone.strftime('%H:%M') %></div>
+				<div class="month"><%= post.created_at.in_time_zone.strftime('%b<br />%Y') %></div>
+				<div class="day"><%= post.created_at.in_time_zone.strftime('%d') %></div>
+				<div class="time"><%=h post.created_at.in_time_zone.strftime('%H:%M') %></div>
 			</div>
 		</div>
 		<div class="event-body grid_7 alpha omega">
