--- a/app/views/event/_events.rhtml
+++ b/app/views/event/_events.rhtml
@@ -1,63 +1,67 @@
 
-<% for event in @events %>
-<div id="event<%= event.id %>" class="event-summary grid_8 alpha omega">
-	<div class="grid_1 alpha">
-		<div class="event-date">
-			<div class="month"><%= event.date_start.in_time_zone.strftime('%b') %></div>
-			<div class="day"><%= event.date_start.in_time_zone.strftime('%d') %></div>
-			<div class="time"><%=h event.date_start.in_time_zone.strftime('%H:%M') %></div>
-		</div>
-	</div>
-	<div class="event-body grid_5 alpha omega" style="width:400px">
-		<h3><%= link_to strip_tags(event.title), event_url(:metro => event.location.metro, :id => event) %></h3>
-		<p class="event-submitted">
-			<% if event.scrapingid %>
-				<%= t(:event_created) %>
-			<% else %>
-			  	<%= link_to avatar_for(event.user, :mini), user_url(:id => event.user) %>
-				<%= link_to event.user.login, user_url(:id => event.user) %>
-				<%= t(:submitted_this_event) %>
-			<% end %>
-			<span class="small-date"><%= time_ago_or_time_stamp(event.date_created) %></span>
-		</p>
-		<p>
-			<%= truncate(strip_tags(textilize(event.description).gsub(/></,"> <").gsub(/<br[^>]*>/," ")), {:length => 128}) %>
-			<%= link_to t(:more), event_url(:metro => event.location.metro, :id => event), :class => 'more' %>
-		</p>
-		<div class="event-details">
-			<span class="tool comments">
-				<%= link_to event.comments.count.to_s + " " + t(:comments), event_url(:metro => event.location.metro, :id => event) + "#comments" %>
-			</span>
-			<% if params[:category] == 'all' %>
-			<span class="tool">
-				<%= t(:category) %>:
-				<%= link_to event.category.name, events_url(:category => event.category.short, :place => params[:place], :type => params[:type], :range => params[:range]) %>
-			</span>
-			<% end %>
-			<% if session['user'] %>
-				<% if event.attendees.find_by_user_id session['user'].id %>
-					<span class="event-push">
-						<%= t(:i_am_going) %>
-					</span>
-				<% else%>
-					<span class="event-push">
-						<%= link_to t(:attend), attend_path(:id => event, :metro => event.location.metro) %>
-					</span>
-				<% end %>
-			<% end %>
-		</div>
-	</div>
-	<div class="grid_2 omega">
-		<div class="event-location">
-			<span class="location-name"><%=h event.location.name %></span><br />
-			<span class="address"><%=h event.location.street %><br />
-			<%=h event.location.zip %> <%= link_to event.location.metro.name, events_url(:place => event.location.metro) %></span>
-		</div>
-	</div>
-	<div style="clear:both;"></div>
-	<div style="margin: 10px 10px 0px 0px;border-bottom: 1px dashed #CCCC99;"></div>
+<% @events.group_by(&:day).each do |day, events| %>
+<div class="">
+  <div class="event-day"><h2><%=day %></h2></div>
+  <% events.each do |event| %>
+    <div id="event<%= event.id %>" class="event-summary grid_8 alpha omega">
+    	<div class="grid_1 alpha">
+    		<div class="event-date">
+    			<div class="month"><%= event.date_start.in_time_zone.strftime('%b') %></div>
+    			<div class="day"><%= event.date_start.in_time_zone.strftime('%d') %></div>
+    			<div class="time"><%=h event.date_start.in_time_zone.strftime('%H:%M') %></div>
+    		</div>
+    	</div>
+    	<div class="event-body grid_5 alpha omega" style="width:400px">
+    		<h3><%= link_to strip_tags(event.title), event_url(:metro => event.location.metro, :id => event) %></h3>
+    		<p class="event-submitted">
+    			<% if event.scrapingid %>
+    				<%= t(:event_created) %>
+    			<% else %>
+    			  	<%= link_to avatar_for(event.user, :mini), user_url(:id => event.user) %>
+    				<%= link_to event.user.login, user_url(:id => event.user) %>
+    				<%= t(:submitted_this_event) %>
+    			<% end %>
+    			<span class="small-date"><%= time_ago_or_time_stamp(event.date_created) %></span>
+    		</p>
+    		<p>
+    			<%= truncate(strip_tags(textilize(event.description).gsub(/></,"> <").gsub(/<br[^>]*>/," ")), {:length => 128}) %>
+    			<%= link_to t(:more), event_url(:metro => event.location.metro, :id => event), :class => 'more' %>
+    		</p>
+    		<div class="event-details">
+    			<span class="tool comments">
+    				<%= link_to event.comments.count.to_s + " " + t(:comments), event_url(:metro => event.location.metro, :id => event) + "#comments" %>
+    			</span>
+    			<% if params[:category] == 'all' %>
+    			<span class="tool">
+    				<%= t(:category) %>:
+    				<%= link_to event.category.name, events_url(:category => event.category.short, :place => params[:place], :type => params[:type], :range => params[:range]) %>
+    			</span>
+    			<% end %>
+    			<% if session['user'] %>
+    				<% if event.attendees.find_by_user_id session['user'].id %>
+    					<span class="event-push">
+    						<%= t(:i_am_going) %>
+    					</span>
+    				<% else%>
+    					<span class="event-push">
+    						<%= link_to t(:attend), attend_path(:id => event, :metro => event.location.metro) %>
+    					</span>
+    				<% end %>
+    			<% end %>
+    		</div>
+    	</div>
+    	<div class="grid_2 omega">
+    		<div class="event-location">
+    			<span class="location-name"><%=h event.location.name %></span><br />
+    			<span class="address"><%=h event.location.street %><br />
+    			<%=h event.location.zip %> <%= link_to event.location.metro.name, events_url(:place => event.location.metro) %></span>
+    		</div>
+    	</div>
+    	<div style="clear:both;"></div>
+    	<div style="margin: 10px 10px 0px 0px;border-bottom: 1px dashed #CCCC99;"></div>
+    </div>
+  <% end %>
 </div>
-
 <% end %>
 
 <div style="clear:both"></div>
